# mudae-autobot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  schema.sql  wishlist.example.json
src/: client.rs  commands.rs  config.rs  database.rs  handler.rs  main.rs  parser.rs  search.rs  setup.rs  stats.rs  tui.rs  utils.rs  verifier.rs  wishlist.rs
