[package]
name = "mudae-selfbot"
version = "0.1.0"
edition = "2021"
description = "Discord selfbot for automating Mudae interactions"
authors = ["kiwi"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strsim = "0.11"
dashmap = "6.1"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"
serenity_self = { version = "0.13", default-features = false, features = ["client", "gateway", "http", "model", "cache", "rustls_backend"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
